--- a/Condições em Python/Módulo if - Aula 06.ipynb
+++ b/Condições em Python/Módulo if - Aula 06.ipynb
@@ -17,16 +17,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O lucro da loja foi de -1000 reais\n"
+     ]
+    }
+   ],
    "source": [
     "faturamento = input('Qual foi o faturamento da loja nesse mês?')\n",
     "custo = input('Qual foi o custo da loja nesse mês?')\n",
     "\n",
-    "lucro = int(faturamento) - int(custo)\n",
+    "if faturamento == '' or custo == '':\n",
+    "    print('Preencha o faturamento e o custo corretamente')\n",
+    "else:\n",
+    "    lucro = int(faturamento) - int(custo)\n",
+    "    print(\"O lucro da loja foi de {} reais\".format(lucro))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O lucro da loja foi de -10 reais\n"
+     ]
+    }
+   ],
+   "source": [
+    "faturamento = input('Qual foi o faturamento da loja nesse mês?')\n",
+    "custo = input('Qual foi o custo da loja nesse mês?')\n",
     "\n",
-    "print(\"O lucro da loja foi de {} reais\".format(lucro))"
+    "if faturamento and custo:\n",
+    "    lucro = int(faturamento) - int(custo)\n",
+    "    print(\"O lucro da loja foi de {} reais\".format(lucro))\n",
+    "else:\n",
+    "    print('Preencha o faturamento e o custo corretamente')\n",
+    "    \n"
    ]
   },
   {
@@ -47,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +96,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
