--- a/Listas/Gabarito - Listas 06.ipynb
+++ b/Listas/Gabarito - Listas 06.ipynb
@@ -16,14 +16,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple tv', 'mac', 'iphone x', 'iphone 11', 'IPad', 'apple watch', 'mac book', 'airpods', 'iphone 12', 'ioculos']\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mTraceback (most recent call last):\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 110, in inner\n",
+      "\u001b[1;31m    return method(app, *args, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 820, in parse_command_line\n",
+      "\u001b[1;31m    self.update_config(self.cli_config)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/configurable.py\", line 230, in update_config\n",
+      "\u001b[1;31m    self._load_config(config)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/configurable.py\", line 167, in _load_config\n",
+      "\u001b[1;31m    with self.hold_trait_notifications():\n",
+      "\u001b[1;31m  File \"/usr/lib/python3.10/contextlib.py\", line 142, in __exit__\n",
+      "\u001b[1;31m    next(self.gen)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/traitlets.py\", line 1362, in hold_trait_notifications\n",
+      "\u001b[1;31m    raise e\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/traitlets.py\", line 1348, in hold_trait_notifications\n",
+      "\u001b[1;31m    value = trait._cross_validate(self, getattr(self, name))\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/traitlets.py\", line 729, in _cross_validate\n",
+      "\u001b[1;31m    value = obj._trait_validators[self.name](obj, proposal)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/traitlets.py\", line 1132, in __call__\n",
+      "\u001b[1;31m    return self.func(*args, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/notebook/notebookapp.py\", line 1522, in _notebook_dir_validate\n",
+      "\u001b[1;31m    raise TraitError(trans.gettext(\"No such notebook dir: '%r'\") % value)\n",
+      "\u001b[1;31mtraitlets.traitlets.TraitError: No such notebook dir: ''/elijunior99/Python-Impressionador''\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mTraceback (most recent call last):\n",
+      "\u001b[1;31m  File \"/home/elijunior/.vscode/extensions/ms-toolsai.jupyter-2022.8.1002151035/pythonFiles/vscode_datascience_helpers/daemon/daemon_python.py\", line 54, in _decorator\n",
+      "\u001b[1;31m    return func(self, *args, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.vscode/extensions/ms-toolsai.jupyter-2022.8.1002151035/pythonFiles/vscode_datascience_helpers/jupyter_daemon.py\", line 111, in m_exec_module_observable\n",
+      "\u001b[1;31m    self._start_notebook(args, cwd, env)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.vscode/extensions/ms-toolsai.jupyter-2022.8.1002151035/pythonFiles/vscode_datascience_helpers/jupyter_daemon.py\", line 168, in _start_notebook\n",
+      "\u001b[1;31m    app.launch_new_instance()\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/jupyter_core/application.py\", line 269, in launch_instance\n",
+      "\u001b[1;31m    return super().launch_instance(argv=argv, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 975, in launch_instance\n",
+      "\u001b[1;31m    app.initialize(argv)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 110, in inner\n",
+      "\u001b[1;31m    return method(app, *args, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/notebook/notebookapp.py\", line 2141, in initialize\n",
+      "\u001b[1;31m    super().initialize(argv)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 110, in inner\n",
+      "\u001b[1;31m    return method(app, *args, **kwargs)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/jupyter_core/application.py\", line 240, in initialize\n",
+      "\u001b[1;31m    self.parse_command_line(argv)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/notebook/notebookapp.py\", line 1611, in parse_command_line\n",
+      "\u001b[1;31m    super().parse_command_line(argv)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 114, in inner\n",
+      "\u001b[1;31m    app.exit(1)\n",
+      "\u001b[1;31m  File \"/home/elijunior/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 963, in exit\n",
+      "\u001b[1;31m    sys.exit(exit_status)\n",
+      "\u001b[1;31mSystemExit: 1\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31m[C 11:48:32.770 NotebookApp] Bad config encountered during initialization: No such notebook dir: ''/elijunior99/Python-Impressionador''\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mFailed to run jupyter as observable with args notebook --no-browser --notebook-dir=\"/elijunior99/Python-Impressionador\" --config=/tmp/e053b9dd-c793-4846-8c64-4a2fca48a688/jupyter_notebook_config.py --NotebookApp.iopub_data_rate_limit=10000000000.0. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -46,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35000\n",
-      "35000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vendas = [1000, 1500, 15000, 20000, 270, 900, 100, 1200]\n",
     "vendas_iphonex = [15000]\n",
@@ -80,17 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[100, 270, 900, 1000, 1200, 1500, 15000, 20000]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vendas.sort(reverse=False)\n",
     "print(vendas)"
@@ -99,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +153,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
