--- a/For/Aulas/For 05.ipynb
+++ b/For/Aulas/For 05.ipynb
@@ -62,7 +62,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (windows store)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -76,12 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
-   }
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
