--- a/Dicionarios/Aula/Dicionario 01.ipynb
+++ b/Dicionarios/Aula/Dicionario 01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o alquimista\n",
+      "prancha surf\n",
+      "2450\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "livro = mais_vendidos['livros']\n",
+    "lazer = mais_vendidos['lazer']\n",
+    "print(livro)\n",
+    "print(lazer)\n",
+    "qtde_noteasus = vendas_tecnologia['notebook asus']\n",
+    "qtde_ipad = vendas_tecnologia['ipad']\n",
+    "print(qtde_noteasus)\n",
+    "print(qtde_ipad)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +81,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
