--- a/Tuplas/Aulas/Tupla 04.ipynb
+++ b/Tuplas/Aulas/Tupla 04.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Qual foi o faturamento de IPhone no dia 20/08/2020?\n",
-    "- Qual foi o produto mais vendido (em unidades) no dia 21/08/2020?"
+    "- Qual foi o faturamento de IPhone no dia 20/08/2020?\n"
    ]
   },
   {
@@ -93,11 +92,49 @@
     "#faturamento = unidades * valor_unitario\n",
     "print('O faturamento de IPhone no dia 20/08/2020 foi de {}'.format(faturamento))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Qual foi o produto mais vendido (em unidades) no dia 21/08/2020?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meu produto mais vendido no dia 21/08/2020 foi o ipad com 4000 unidades. Cor: prata, Capacidade 128gb\n"
+     ]
+    }
+   ],
+   "source": [
+    "produto_mais_vendido = ''\n",
+    "qtde_produto_mais_vendido = 0\n",
+    "cor_produto_mais_vendido = ''\n",
+    "capacidade_produto_mais_vendido = ''\n",
+    "for item in vendas:\n",
+    "    data, produto, cor, capacidade, unidades, valor_unitario = item\n",
+    "    if data == '21/08/2020':\n",
+    "        if unidades > qtde_produto_mais_vendido:\n",
+    "            produto_mais_vendido = produto\n",
+    "            qtde_produto_mais_vendido = unidades\n",
+    "            cor_produto_mais_vendido = cor\n",
+    "            capacidade_produto_mais_vendido = capacidade\n",
+    "\n",
+    "print('Meu produto mais vendido no dia 21/08/2020 foi o {} com {} unidades. Cor: {}, Capacidade {}'\n",
+    "      .format(produto_mais_vendido, qtde_produto_mais_vendido, cor_produto_mais_vendido, capacidade_produto_mais_vendido))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +148,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
