--- a/Funções/Aula/Function 01.ipynb
+++ b/Funções/Aula/Function 01.ipynb
@@ -32,15 +32,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cadastrar_produto():\n",
+    "    produto = input('Digite o nome do produto que deseja cadastrar')\n",
+    "    produto = produto.casefold()\n",
+    "    print('Produto {} cadastrado com sucesso'.format(produto))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Produto zé cadastrado com sucesso\n",
+      "Produto rub cadastrado com sucesso\n",
+      "Produto rou cadastrado com sucesso\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    cadastrar_produto()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +80,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
