--- a/Iterables/Aula/Outras Estruturas de Dados 01.ipynb
+++ b/Iterables/Aula/Outras Estruturas de Dados 01.ipynb
@@ -17,9 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iphone\n",
+      "samsung galaxy\n",
+      "tv samsung\n",
+      "ps5\n",
+      "tablet\n",
+      "ipad\n",
+      "tv philco\n",
+      "notebook hp\n",
+      "notebook dell\n",
+      "notebook asus\n"
+     ]
+    }
+   ],
    "source": [
     "produtos = ['iphone', 'samsung galaxy', 'tv samsung', 'ps5', 'tablet', 'ipad', 'tv philco', 'notebook hp', 'notebook dell', 'notebook asus']\n",
     "\n",
@@ -36,9 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "i\n",
+      "r\n",
+      "a\n",
+      "@\n",
+      "g\n",
+      "m\n",
+      "a\n",
+      "i\n",
+      "l\n",
+      ".\n",
+      "c\n",
+      "o\n",
+      "m\n"
+     ]
+    }
+   ],
    "source": [
     "texto = 'lira@gmail.com'\n",
     "\n",
@@ -55,9 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iphone\n",
+      "samsung galaxy\n",
+      "tv samsung\n",
+      "ps5\n",
+      "tablet\n",
+      "ipad\n",
+      "tv philco\n",
+      "notebook hp\n",
+      "notebook dell\n",
+      "notebook asus\n"
+     ]
+    }
+   ],
    "source": [
     "produtos = ('iphone', 'samsung galaxy', 'tv samsung', 'ps5', 'tablet', 'ipad', 'tv philco', 'notebook hp', 'notebook dell', 'notebook asus')\n",
     "\n",
@@ -74,9 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iphone\n",
+      "samsung galaxy\n",
+      "tv samsung\n",
+      "ps5\n",
+      "tablet\n",
+      "ipad\n",
+      "tv philco\n",
+      "notebook hp\n",
+      "notebook dell\n",
+      "notebook asus\n"
+     ]
+    }
+   ],
    "source": [
     "vendas_produtos = {'iphone': 15000, 'samsung galaxy': 12000, 'tv samsung': 10000, 'ps5': 14300, 'tablet': 1720, 'ipad': 1000, 'tv philco': 2500, 'notebook hp': 1000, 'notebook dell': 17000, 'notebook asus': 2450}\n",
     "\n",
@@ -95,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +181,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
