--- a/Iterables/Aula/Outras Estruturas de Dados 03.ipynb
+++ b/Iterables/Aula/Outras Estruturas de Dados 03.ipynb
@@ -38,17 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['988.305.810-11', '870.565.160-33', '892.080.930-50', '393.462.330-10', '596.125.830-05', '762.196.080-97', '990.236.770-48', '827.363.930-40', '263.027.380-67', '462.126.030-81', '925.413.640-91']\n",
+      "Temos 11 clientes na loja\n"
+     ]
+    }
+   ],
    "source": [
-    "cpf_clientes = ['762.196.080-97', '263.027.380-67', '827.363.930-40', '925.413.640-91', '870.565.160-33', '892.080.930-50', '462.126.030-81', '393.462.330-10', '393.462.330-10', '393.462.330-10', '988.305.810-11', '596.125.830-05', '596.125.830-05', '990.236.770-48']"
+    "cpf_clientes = ['762.196.080-97', '263.027.380-67', '827.363.930-40', '925.413.640-91', '870.565.160-33', '892.080.930-50', '462.126.030-81', '393.462.330-10', '393.462.330-10', '393.462.330-10', '988.305.810-11', '596.125.830-05', '596.125.830-05', '990.236.770-48']\n",
+    "\n",
+    "set_cpf_clientes = set(cpf_clientes)\n",
+    "cpf_clientes_unicos = list(set_cpf_clientes)\n",
+    "print(cpf_clientes_unicos)\n",
+    "print('Temos {} clientes na loja'.format(len(set_cpf_clientes)))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +76,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "45bdd4b5b0aa61bc8f8cffae1ebc2ac17869ab76e20cdaf57ab34975c00198d5"
+   }
   }
  },
  "nbformat": 4,
